--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/IMG_8960_2.jpg" alt="" /></a>
+					<a class="image avatar"><img src="images/IMG_8960_2.jpg" alt="" /></a>
 					<h1><strong>Aaron Quan</strong>
 					<br />Los Angeles, CA <br>
 					aaq7@cornell.edu<br>
@@ -41,15 +41,16 @@
 							<li><a href="projects.html" class="button">Projects</a></li>
 						</ul>
 						<ul class="actions">
-							<li><a href="images/Quan_Aaron_Resume_2025.jpg" class="button">Resume</a></li>
+							<li><a href="images/Quan_Aaron_Resume_2025.jpg" class="button" download>Resume</a></li>
 						</ul>
+						
 					</section>
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
 						<li><a href="https://www.linkedin.com/in/aaron-quan-9418a8280/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://github.com/ayquan/" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="mailto:aaq7@cornell.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
