--- a/projects.html
+++ b/projects.html
@@ -89,12 +89,12 @@
                 <p>Goentoro Lab - California Institute of Technology, Summer 2024</p>
             </article>
             <article class="col-6 col-12-xsmall work-item">
-                <a href="https://www.google.com/" class="image fit">
-                    <img src="images/thumbs/03.jpg" alt="Project 3" />
+                <a href="https://github.com/ayquan/smartselect" class="image fit">
+                    <img src="images/thumbs/smartselect.png" alt="Project 3" />
                     <div class="hover-text">Click to learn more</div>
                 </a>
-                <h3>Tortor metus commodo</h3>
-                <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+                <h3>Magic Scissors Selection Tool</h3>
+                <p>CS2110 - Cornell University, Spring 2024.</p>
             </article>
             <article class="col-6 col-12-xsmall work-item">
                 <a href="https://www.google.com/" class="image fit">
