--- a/projects.html
+++ b/projects.html
@@ -97,12 +97,12 @@
                 <p>CS2110 - Cornell University, Spring 2024.</p>
             </article>
             <article class="col-6 col-12-xsmall work-item">
-                <a href="https://www.google.com/" class="image fit">
-                    <img src="images/thumbs/04.jpg" alt="Project 4" />
+                <a href="https://github.com/ayquan/Personal-Investments" class="image fit">
+                    <img src="images/thumbs/plots.png" alt="Project 4" />
                     <div class="hover-text">Click to learn more</div>
                 </a>
-                <h3>Quam neque phasellus</h3>
-                <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+                <h3>Analysis on Personal Investments for 2024</h3>
+                <p>Python script comparing how my stocks performed with respect to my net investments, 2024-2025.</p>
             </article>
         </div>
 
