--- a/projects.html
+++ b/projects.html
@@ -89,7 +89,7 @@
                 <p>Goentoro Lab - California Institute of Technology, Summer 2024</p>
             </article>
             <article class="col-6 col-12-xsmall work-item">
-                <a href="https://github.com/ayquan/smartselect" class="image fit">
+                <a href="smartselect.html" class="image fit">
                     <img src="images/thumbs/smartselect.png" alt="Project 3" />
                     <div class="hover-text">Click to learn more</div>
                 </a>
@@ -97,7 +97,7 @@
                 <p>CS2110 - Cornell University, Spring 2024.</p>
             </article>
             <article class="col-6 col-12-xsmall work-item">
-                <a href="https://github.com/ayquan/Personal-Investments" class="image fit">
+                <a href="stocks.html" class="image fit">
                     <img src="images/thumbs/plots.png" alt="Project 4" />
                     <div class="hover-text">Click to learn more</div>
                 </a>
