--- a/drosophila.html
+++ b/drosophila.html
@@ -70,24 +70,24 @@
         <h2>Regenerating Fly Limbs Using Genetic Engineering</h2>
         <div class="row">
             <article class="col-6 col-12-xsmall work-item">
-                <a href="" class="image">
+                <a class="image">
                     <img src="images/thumbs/PNG image.jpg"/>
                 </a>
                 <h3>Goentoro Lab - California Institute of Technology, Summer 2024</h3>
                 <p>Numerous biological mechanisms control the growth and development of Drosophila Melanogaster flies. During my time with the Goentoro Lab group, I investigated if it was possible to utlilize genetics to accelerate a fly’s metabolic pathway and produce a regenerative response.<br><br></p>
             <article class="col-6 col-12-xsmall work-item">
-                <a href="" class="image">
+                <a  class="image">
                     <img src="images/thumbs/base.jpg" />
                 </a>
                 <p>This project experimented with two genetically altered fly lines: r4>TOR and 	Dilp2-Gal4>UAS-NaChBac, which affected the liver and brain respectively.<br><br></p>
             <article class="col-6 col-12-xsmall work-item">
-                <a href="" class="image">
+                <a  class="image">
                     <img src="images/thumbs/r4tor.jpg"  />
                 </a>
                 <p>The r4>TOR line showed statistically signifigant regenerative potential.<br></p>
             </article>
             <article class="col-6 col-12-xsmall work-item">
-                <a href="" class="image">
+                <a  class="image">
                     <img src="images/thumbs/PNG image.jpg" />
                 </a>
                 <p> The Dilp2-Gal4>UAS-NaChBac line did not have signifigant data, but yieded a outlier showing 40% regeneration.<br><br></p>
