--- a/stocks.html
+++ b/stocks.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <title>tobacco</title>
+    <title>stocks</title>
     <link rel="stylesheet" href="assets/css/main.css" />
     <style>
         /* Add spacing around the page */
@@ -67,35 +67,20 @@
 <body>
     <!-- Section Two: Recent Work -->
     <section id="two">
-        <h2>Analyzing the Effect of NAT on Nicotiana quadrivalvis Root Growth</h2>
+        <h2>Analysis on Personal Investments for 2024</h2>
         <div class="row">
             <article class="col-6 col-12-xsmall work-item">
-                <a  class="image">
-                    <img src="images/thumbs/20241204010.jpg"/>
-                </a>
-                <h3>Boyce Thompson Institute - Cornell University, Fall 2024</h3>
-                <p>Drought tolerance is an important trait to study in plants. N-nitrosoanatabine(NAT) is hypothesized to be a key contributer to the drought resistance of Nicotiana quadrivalvis(tobacco) plants. This project analyzed the growth rate of tobacco roots at various concentrations of NAT agar solution.<br><br></p>
-            <article class="col-6 col-12-xsmall work-item">
-                <a  class="image">
-                    <img src="images/thumbs/20241125009.jpg" />
-                </a>
-            <article class="col-6 col-12-xsmall work-item">
-                <a  class="image">
-                    <img src="images/thumbs/20241125010.jpg"  />
-                </a>
-                <p>Tobacco seedlings were imaged four days after being planted. Plates were imaged every day for ten days. The first image contains seedlings in 0mM NAT, the second image contains seedlings in 5mM NAT.<br></p>
-            </article>
-            <article class="col-6 col-12-xsmall work-item">
                 <a class="image">
-                    <img src="images/thumbs/20241204009.jpg" />
+                    <img src="images/thumbs/plots.png"/>
                 </a>
+                <h3>Python script comparing how my stocks performed with respect to my net investments, 2024-2025.</h3>
+                <p>This python code uses yahoo finance to calculate and plot my total investments for 2024. The script also overlays how my investments would have performed if I invested all my money into each respective stock. Using this graph allows me to visualize which stocks are performing well for me and which ones I should sell.<br><br></p>
             <article class="col-6 col-12-xsmall work-item">
                 <a  class="image">
-                    <img src="images/thumbs/20241204010.jpg"  />
+                    <img src="images/thumbs/data.png" />
                 </a>
-                <p>The first image contains seedlings in 0mM NAT, the second image contains seedlings in 5mM NAT after ten days.<br><br></p>
-                <p>Concentrations of NAT below 1mM did not signifigantly redctuce root growth rates. However, past 1mM, NAT very signifigantly effected the seedlings. At 5mM NAT, there was very little root growth, and the roots began to curl instead of grow vertically.<br></p>
-            </article>
+                <p>This additional code reuses the dataframe generated to calculate the net gain or loss for each of my investments in 2024.<br><br></p>
+                <p>Full code can be found here: <a href="https://github.com/ayquan/Personal-Investments" class="github-link">github</a><br><br></p>
         </div>
 
         <ul class="actions">
