--- a/fires.html
+++ b/fires.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <title>drosophila</title>
+    <title>fires</title>
     <link rel="stylesheet" href="assets/css/main.css" />
     <style>
         /* Add spacing around the page */
@@ -44,7 +44,7 @@
         }
 
         /* Increase text size below the image */
-        h2 {
+        h3 {
             font-size: 24px; /* Increase the font size for the heading */
             margin-top: 20px; /* Add space between header and text */
         }
@@ -68,31 +68,21 @@
 <body>
     <!-- Section Two: Recent Work -->
     <section id="two">
-        <h2>Regenerating Fly Limbs Using Genetic Engineering</h2>
+        <h2>January 2025 Northeast Los Angeles Wildfires</h2>
         <div class="row">
             <article class="col-6 col-12-xsmall work-item">
                 <a class="image">
-                    <img src="images/thumbs/PNG image.jpg"/>
+                    <img src="images/thumbs/firesmain.png"/>
                 </a>
-                <h3>Goentoro Lab - California Institute of Technology, Summer 2024</h3>
-                <p>Numerous biological mechanisms control the growth and development of Drosophila Melanogaster flies. During my time with the Goentoro lab group, I investigated if it was possible to utlilize genetics to accelerate a fly’s metabolic pathway and produce a regenerative response.<br><br></p>
+                <h3>HTML, 2025.</h3>
+                <p>This website was made during the January 2025 California wildfires. I made the website as a way to inform friends and family about the day-to-day status of the Eaton fire, how much northeast LA areas were being affected, and what areas should evacuate. In particular, this website was a helpful tool for my grandparents who were less aware of the situation.<br><br></p>
             <article class="col-6 col-12-xsmall work-item">
                 <a  class="image">
-                    <img src="images/thumbs/base.jpg" />
+                    <img src="images/thumbs/firesmenu.png" />
                 </a>
-                <p>This project experimented with two genetically altered fly lines: r4>TOR and Dilp2-Gal4>UAS-NaChBac, which affected the liver and brain respectively.<br><br></p>
-            <article class="col-6 col-12-xsmall work-item">
-                <a  class="image">
-                    <img src="images/thumbs/r4tor.jpg"  />
-                </a>
-                <p>The r4>TOR line showed statistically signifigant regenerative potential.<br></p>
-            </article>
-            <article class="col-6 col-12-xsmall work-item">
-                <a  class="image">
-                    <img src="images/thumbs/PNG image.jpg" />
-                </a>
-                <p> The Dilp2-Gal4>UAS-NaChBac line did not have signifigant data, but yieded a outlier that was able to grow back ~20% of its amputated limb and its Tibiotarsal joint in only 2 weeks.<br><br></p>
-                <p> This project generated potential for further investigation of the r4>TOR and Dilp2-Gal4>UAS-NaChBac genetic strains, which are currently being researched.<br><br></p>
+                <p>Some key features of the website included a map of northeast Los Angeles, a button that listed evacuation zones, information on air quality, and a containment bar showing the percentage of fire being contained.<br><br></p>
+                <p>Full website can be found here: <a href="https://ayquan.github.io/LAFIRES/" class="link">website</a></p>
+                <p>Full code can be found here: <a href="https://github.com/ayquan/LAFIRES" class="github-link">github</a><br><br></p>
         </div>
 
         <ul class="actions">
