--- a/smartselect.html
+++ b/smartselect.html
@@ -10,6 +10,7 @@
         body {
             padding: 40px;
             font-family: Arial, sans-serif;
+            font-size: 1.1em;
         }
 
         /* Center the content within the section */
