--- a/stocks.html
+++ b/stocks.html
@@ -10,6 +10,7 @@
         body {
             padding: 40px;
             font-family: Arial, sans-serif;
+            font-size: 1.1em;
         }
 
         /* Center the content within the section */
@@ -73,7 +74,7 @@
                 <a class="image">
                     <img src="images/thumbs/plots.png"/>
                 </a>
-                <h3>Python script comparing how my stocks performed with respect to my net investments, 2024-2025.</h3>
+                <h3>Python script comparing how my stocks performed, 2024-2025.</h3>
                 <p>This python code uses yahoo finance to calculate and plot my total investments for 2024. The script also overlays how my investments would have performed if I invested all my money into each respective stock. Using this graph allows me to visualize which stocks are performing well for me and which ones I should sell.<br><br></p>
             <article class="col-6 col-12-xsmall work-item">
                 <a  class="image">
