--- a/tobacco.html
+++ b/tobacco.html
@@ -10,6 +10,7 @@
         body {
             padding: 40px;
             font-family: Arial, sans-serif;
+            font-size: 1.1em;
         }
 
         /* Center the content within the section */
@@ -48,8 +49,13 @@
             margin-top: 20px; /* Add space between header and text */
         }
 
+        h2 {
+            font-size: 18.5px; /* Increase the font size for the heading */
+            margin-top: 20px; /* Add space between header and text */
+        }
+
         p {
-            font-size: 18px; /* Increase the font size for the paragraph */
+            font-size: 10px; /* Increase the font size for the paragraph */
             margin-top: 10px;
             text-align: left; /* Align text to the left */
             max-width: 600px; /* Limit the width of the text block to match the image */
@@ -93,7 +99,7 @@
                 <a  class="image">
                     <img src="images/thumbs/20241204010.jpg"  />
                 </a>
-                <p>The first image contains seedlings in 0mM NAT, the second image contains seedlings in 5mM NAT after ten days.<br><br></p>
+                <p>The first image contains seedlings in 0mM NAT, the second image contains seedlings in 5mM NAT after ten days. Clearly, NAT is effecting the root growth of these seedlings.<br><br></p>
                 <p>Concentrations of NAT below 1mM did not signifigantly redctuce root growth rates. However, past 1mM, NAT very signifigantly effected the seedlings. At 5mM NAT, there was very little root growth, and the roots began to curl instead of grow vertically.<br></p>
             </article>
         </div>
