--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Biological Engineering Student at Cornell University focused on innovation for sustainability.</h2>
+							<h2>Biological Engineering Student at Cornell University interested in healthcare</h2>
 						</header>
 						<p>Experience: <br>
+						Medical Research Intern - Berkeley Pharma Tech, Fall 2025	
 						Research and Development Intern - Proctor & Gamble, Summer 2025 <br>
 						Research Assistant - Boyce Thompson Institute, 2024-Present <br>
 						Research Intern - California Institute of Technology, Summer 2024 <br>
-						Student Intern - Metrogreens, 2020-2021</p>
 						<ul class="actions">
 							<li><a href="projects.html" class="button">Projects</a></li>
 						</ul>
@@ -65,4 +65,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
