--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Biological Engineering Student at Cornell University interested in healthcare</h2>
+							<h2>Biological Engineering Student at Cornell University</h2>
 						</header>
 						<p>Experience: <br>
-						Medical Research Intern - Berkeley Pharma Tech, Fall 2025	
+						Medical Research Intern - Berkeley Pharma Tech, Fall 2025 <br>
 						Research and Development Intern - Proctor & Gamble, Summer 2025 <br>
 						Research Assistant - Boyce Thompson Institute, 2024-Present <br>
 						Research Intern - California Institute of Technology, Summer 2024 <br>
@@ -67,4 +67,5 @@
 	</body>
 
 </html>
+
 
