--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							<li><a href="projects.html" class="button">Projects</a></li>
 						</ul>
 						<ul class="actions">
-							<li><a href="images/QUAN_AARON_RESUME_AUGUST_2025.pdf" class="button" download>Resume</a></li>
+							<li><a href="images/QUAN_AARON_RESUME_AUGUST_2025.jpg" class="button" download>Resume</a></li>
 						</ul>
 						
 					</section>
@@ -67,6 +67,7 @@
 	</body>
 
 </html>
+
 
 
 
